Add: Button hero component
Also some color variables where added.

--- a/chessy_frontend/src/assets/colors.css
+++ b/chessy_frontend/src/assets/colors.css
@@ -2,7 +2,8 @@
     --text: #4d3f44;
     --background: #f2ebbf;
     --primary-button: #f3b562;
-    --primary-button-dark: #775a33;
+    --primary-button-dark: #a07a48;
     --secondary-button: #f06060;
     --accent: #8cbeb2;
+    --accent-dark: #688d84;
 }
