--- a/chessy_frontend/src/assets/base.css
+++ b/chessy_frontend/src/assets/base.css
@@ -7,10 +7,15 @@
     padding: 0;
     margin: 0;
     color: var(--text);
-    font-family: 'Cairo', sans-serif;
+    font-family: 'Outfit', sans-serif;
+    font-weight: 500;
 }
 
 body {
     font-family: 'Work Sans', sans-serif;
     background-color: var(--background);
+}
+
+button {
+    border: none;
 }
