Feat: Create textInput component and implementing animations

--- a/chessy_frontend/src/assets/typography.css
+++ b/chessy_frontend/src/assets/typography.css
@@ -45,5 +45,6 @@
 }
 .font-label-small {
     font-family: 'Arsenal', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1rem;
+    font-weight: bold;
 }
