Fix: Change button font family font

--- a/chessy_frontend/src/assets/typography.css
+++ b/chessy_frontend/src/assets/typography.css
@@ -34,7 +34,8 @@
     font-size: 1rem;
 }
 .font-button {
-    font-family: 'personaFont', Arial, Helvetica, sans-serif;
+    font-family: 'Arsenal', Arial, Helvetica, sans-serif;
+    font-weight: bold;
     font-size: 2.5rem;
 }
 
